test/Neg/termina/function_call/missing_const_params.fin

function fun0<const N : usize>() -> u32 {

    return 0;

}

function main() -> u32 {

    let x : u32 = fun0();

    return x;

}